# sber-lizing

./: .env  docker-compose.yml
bot/: .env  Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py
bot/core/handlers/: common.py
parser/: .env  .local.env  .pre-commit-config.yaml  Dockerfile  alembic.ini  logger.py  main.py  pyproject.toml  settings.py
parser/core/classes/: pagination.py  tg_bot.py
parser/core/db/: auto_dao.py  database.py
parser/core/db/migrations/: env.py
parser/core/db/migrations/versions/: 30ea175080ea_init_migration.py  36853035f3cd_init_migration.py  47a55c998e59_init_migration.py  4863ef703f39_init_migration.py  82ff2dbd8162_add_vin_to_auto_table.py  f4d40334ddcb_init_migration.py
parser/core/db/models/: auto.py
parser/core/schemas/: avto_schema.py
