[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "psycopg[binary]>=3.2.9",
    "psycopg-pool>=3.2.6",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.41",
    "webdriver-manager>=4.0.2",
    "pydantic>=2.11.7",
    "aiogram>=3.21.0",
    "fake-useragent>=2.2.0",
    "alembic>=1.16.4",
]
